[project]
name = "recover"
version = "1.0.0"
description = "Recover compile-units from stripped binary executables"
authors = [
    { name = "Chariton Karamitas", email = "huku@census-labs.com" },
]
requires-python = ">=3.9"
dependencies = [
    "networkx",
    "numpy",
    "pygad",
    # "pygraphviz",
]

[project.scripts]
recover = "recover.__main__:main"

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
warn_no_return = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recover"]
